--- a/sandwitchbot_backend/package.json
+++ b/sandwitchbot_backend/package.json
@@ -37,18 +37,13 @@
     "@nestjs/websockets": "^9.2.1",
     "@types/cron": "^2.0.0",
     "@types/qs": "^6.9.7",
-    "@uniswap/sdk": "^3.0.3",
-    "@uniswap/sdk-core": "^3.1.1",
-    "@uniswap/smart-order-router": "^3.6.0",
-    "@uniswap/v3-sdk": "^3.9.0",
     "axios": "^1.3.4",
-    "binance-api-node": "^0.12.3",
     "cache-manager": "^5.1.7",
     "ccxt": "^2.6.36",
     "class-validator": "^0.14.0",
     "dateformat": "^5.0.3",
     "ether.js": "^1.0.0",
-    "ethers": "^5.6.0",
+    "ethers": "^5.7.1",
     "firebase": "^9.17.1",
     "firebase-admin": "^11.5.0",
     "nestjs-ccxt": "^1.0.0",
@@ -56,7 +51,9 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "socket.io": "^4.6.0",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "@flashbots/ethers-provider-bundle": "^0.6.2",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
